change Roles M:N to @ElementCollection.